# Telebot

./: .gitignore  Makefile  README.md  main.py  poetry.exe.stackdump  pyproject.toml
mybot/: bot.py  conversation.py  handlers.py  main.py  utils.py
